Fix scrollbar width

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,21 @@
     /* background: #1e2238; */
     background: transparent;
   }
+  .thin-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(155, 155, 155, 0.5) transparent;
+  }
+  .thin-scrollbar::-webkit-scrollbar {
+    width: 6px;
+  }
+  .thin-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  .thin-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(155, 155, 155, 0.5);
+    border-radius: 20px;
+    border: transparent;
+  }
 }
 
 @layer utilities {
